Fix anchor links hidden behind toolbar 4

--- a/quantecon_book_theme/scss/quantecon-book-theme.scss
+++ b/quantecon_book_theme/scss/quantecon-book-theme.scss
@@ -149,8 +149,7 @@ body {
 }
 
 .section, .reference, .math {
-  padding-top: 60px;
-  margin-top: -60px;
+  scroll-margin-top: 60px;
 }
 
 h1 {
